Create y get (aunque sin mostrar) de mascotas
También trabajando en back-end con PHP. Por cierto, debería colocar los archivos aquí

--- a/src/app/agregar-mascota/agregar-mascota.component.html
+++ b/src/app/agregar-mascota/agregar-mascota.component.html
@@ -1,1 +1,28 @@
-<p>agregar-mascota works!</p>
+<h2>Agregar mascota <mat-icon>pets</mat-icon></h2>
+<form (ngSubmit)="onSubmit()" #formMascota="ngForm">
+    <p>
+
+        <mat-form-field>
+            <input matInput name="nombre" [(ngModel)]="mascotaModel.nombre"
+                type="text"
+                placeholder="Nombre">
+        </mat-form-field>
+    </p>
+    <p>
+        <mat-form-field>
+            <input matInput name="raza" [(ngModel)]="mascotaModel.raza"
+                type="text"
+                placeholder="Raza">
+        </mat-form-field>
+    </p>
+    <p>
+        <mat-form-field>
+            <input matInput name="edad" [(ngModel)]="mascotaModel.edad"
+                type="number"
+                placeholder="Edad">
+        </mat-form-field>
+    </p>
+    <p>
+        <button type="submit" mat-flat-button color="accent">Guardar</button>
+    </p>
+</form>
