--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,17 @@
-.contenedor-padre{
+.contenedor-padre {
     display: flex;
-  flex-flow: column;
-  height: 100%;
+    flex-flow: column;
+    height: 100%;
 }
 
-.barra{
+.barra {
     flex: 0 1 auto;
 }
-.contenido{
+
+.contenido {
     flex: 1 1 auto;
+}
+
+.padding-10 {
+    padding: 10px;
 }
