--- a/src/app/listar-mascotas/listar-mascotas.component.html
+++ b/src/app/listar-mascotas/listar-mascotas.component.html
@@ -15,7 +15,25 @@
         <th mat-header-cell *matHeaderCellDef>Edad</th>
         <td mat-cell *matCellDef="let mascota"> {{mascota.edad}} </td>
     </ng-container>
+    <ng-container matColumnDef="editar">
+        <th mat-header-cell *matHeaderCellDef>Editar</th>
+        <td mat-cell *matCellDef="let mascota">
+            <button mat-icon-button>
+                <mat-icon color="primary">edit</mat-icon>
+            </button>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="eliminar">
+        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+        <td mat-cell *matCellDef="let mascota">
+            <button mat-icon-button>
+                <mat-icon color="warn">delete</mat-icon>
+            </button>
+        </td>
+    </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['nombre', 'raza', 'edad']"></tr>
-    <tr mat-row *matRowDef="let fila; columns: ['nombre', 'raza', 'edad'];"></tr>
+    <tr mat-header-row *matHeaderRowDef="['nombre', 'raza', 'edad', 'editar',
+        'eliminar']"></tr>
+    <tr mat-row *matRowDef="let fila; columns: ['nombre', 'raza', 'edad',
+        'editar', 'eliminar'];"></tr>
 </table>
