--- a/src/app/listar-mascotas/listar-mascotas.component.html
+++ b/src/app/listar-mascotas/listar-mascotas.component.html
@@ -18,9 +18,9 @@
     <ng-container matColumnDef="editar">
         <th mat-header-cell *matHeaderCellDef>Editar</th>
         <td mat-cell *matCellDef="let mascota">
-            <button mat-icon-button>
+            <a mat-icon-button [routerLink]="['/mascotas/editar', mascota.id]">
                 <mat-icon color="primary">edit</mat-icon>
-            </button>
+            </a>
         </td>
     </ng-container>
     <ng-container matColumnDef="eliminar">
