--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
     </mat-toolbar-row>
   </mat-toolbar>
   <mat-sidenav-container class="contenido">
-    <mat-sidenav style="min-width: 300px;" #cajon mode="side" opened>
+    <mat-sidenav style="min-width: 300px;" #cajon mode="side">
       <mat-nav-list>
         <a mat-list-item routerLink="/mascotas/agregar">
           <mat-icon color="accent">add</mat-icon>
