--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,10 +33,10 @@
           </mat-expansion-panel-header>
 
           <mat-nav-list>
-            <a mat-list-item href='#'>
+            <a mat-list-item routerLink="/acerca-de">
               Acerca de
             </a>
-            <a mat-list-item href='#'>
+            <a mat-list-item href='https://parzibyte.me/blog/contrataciones-ayuda/'>
               Ayuda
             </a>
           </mat-nav-list>
